--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
-Flask
-Flask-PyMongo
-Flask-Login
-Flask-WTF
-Werkzeug
-pandas
-openpyxl
-deap
-pymongo
-dnspython
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
+deap==1.4.3
+dnspython==2.7.0
+et_xmlfile==2.0.0
+Flask==3.1.1
+Flask-Login==0.6.3
+Flask-PyMongo==3.0.1
+Flask-WTF==1.2.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+numpy==2.3.1
+openpyxl==3.1.5
+pandas==2.3.0
+pymongo==4.13.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+six==1.17.0
+tzdata==2025.2
+Werkzeug==3.1.3
+WTForms==3.2.1
+gunicorn==20.1.0
